--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/green_100"
+    android:background="@color/yellow_100"
     android:orientation="vertical"
     tools:context=".SplashActivity">
 
