--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -23,9 +23,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Olá Bem vindo de volta!"
-            android:textSize="20sp" />
+            android:layout_margin="15dp"
+            android:textColor="@color/green_700"
+            android:fontFamily="@font/helveticabold"
+            android:text="Olá Bem vindo de volta! 👋"
+            android:textSize="25sp" />
 
         <com.google.android.material.textfield.TextInputLayout
 
